--- a/UniGraphics/MainWindow.xaml
+++ b/UniGraphics/MainWindow.xaml
@@ -6,26 +6,13 @@
     xmlns:local="clr-namespace:UniGraphics"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="UniGraphics"
-    Width="601"
-    Height="518"
+    Width="1300"
+    Height="700"
     mc:Ignorable="d">
     <Grid Name="mainGrid">
-        <Canvas Name="fractalCnv">
-            <Image
-                Name="fractalImg"
-                Canvas.Left="0"
-                Canvas.Top="0"
-                Width="400"
-                Height="400" />
-        </Canvas>
-        <Button
-            Name="createFractalBtn"
-            Width="73"
-            Height="45"
-            Margin="0,0,108,31"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"
-            Click="createFractalBtn_Click"
-            Content="Create fractal" />
+        <Frame
+            Name="MainFrame"
+            NavigationUIVisibility="Hidden"
+            Source="Fractals/FractalsView.xaml" />
     </Grid>
 </Window>
