--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -6,31 +6,174 @@
     xmlns:local="clr-namespace:UniGraphics.Fractals"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="FractalsView"
-    d:DesignHeight="500"
-    d:DesignWidth="500"
+    d:DesignHeight="600"
+    d:DesignWidth="900"
     Background="White"
     mc:Ignorable="d">
 
-    <Grid>
+    <Grid Margin="0,50,0,0" HorizontalAlignment="Left" Width="900">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="334*"/>
+            <RowDefinition Height="111*"/>
+            <RowDefinition Height="105*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="269*"/>
+            <ColumnDefinition Width="631*"/>
+        </Grid.ColumnDefinitions>
         <Canvas
             Name="fractalCnv"
-            Width="410"
-            Height="410"
-            Margin="79,23,11,67">
+            Margin="1,0,615,0" 
+            Grid.RowSpan="2" 
+            Grid.Column="1">
             <Image
                 Name="fractalImg"
-                Width="400"
-                Height="400"
-                RenderOptions.BitmapScalingMode="NearestNeighbor" />
+                Width="622"
+                Height="540"
+                RenderOptions.BitmapScalingMode="NearestNeighbor" 
+                Grid.Column ="1"
+                Canvas.Left="10" 
+                Canvas.Top="10" />
         </Canvas>
         <Button
             Name="createFractalBtn"
-            Width="100"
             Height="45"
-            Margin="16,0,384,10"
+            Margin="52,0,55,56" 
             VerticalAlignment="Bottom"
-            Click="generateFractal"
-            Content="Create fractal" />
-        <Button Content="Save as a picture" HorizontalAlignment="Left" Height="45" Margin="127,445,0,0" VerticalAlignment="Top" Width="121" Click="SavePicture"/>
+            Click="generateFractal" 
+            Grid.Row="1" 
+            RenderTransformOrigin="0.509,0.578" 
+            HorizontalAlignment="Center" 
+            Width="162">
+            <Grid Width="102" RenderTransformOrigin="0.405,0.5" Height="27">
+                <Image HorizontalAlignment="Left" Source="pack://siteoforigin:,,,/Resources/BuildFractal.png" Grid.Column="0" VerticalAlignment="Stretch" Margin="-25,0,0,0" Width="25"/>
+                <Label HorizontalAlignment="Center" Content="Побудувати фрактал" Margin="0,0,-21,0"/>
+            </Grid>
+        </Button>
+        <Button 
+            Name="saveFractalBtn"
+            Height="41" Margin="52,0,55,10" 
+            VerticalAlignment="Bottom" 
+            Click="SavePicture" 
+            Grid.Row="1" 
+            HorizontalAlignment="Center" 
+            Width="162">
+            <Grid >
+                <Image HorizontalAlignment="Left" Source="pack://siteoforigin:,,,/Resources/save.png" Grid.Column="0" VerticalAlignment="Stretch" Margin="-25,0,0,0" Width="25"/>
+                <Label HorizontalAlignment="Center" Content="Зберегти" Margin="0,0,-21,0"/>
+            </Grid>
+        </Button>
+        <Label Content="Фрактали" 
+               FontSize="25" 
+               HorizontalAlignment="Center" 
+               Margin="78,10,57,0" 
+               VerticalAlignment="Top" 
+               Grid.Row="0"
+               Grid.Column="0"
+               Height="49" 
+               Width="134"/>
+        <Label Content="f(z) = zk + c" 
+               FontSize="20" 
+               HorizontalAlignment="Center" 
+               Margin="79,59,68,0" 
+               VerticalAlignment="Top" 
+               Grid.Row="0"
+               Grid.Column="0"
+               Height="36" 
+               Width="122"/>
+        <Label Content="Введіть коефіцієнти:" 
+            FontSize="18" 
+            HorizontalAlignment="Center" 
+            Margin="42,95,36,0" 
+            VerticalAlignment="Top" 
+            Grid.Row="0"
+            Grid.Column="0"
+            Height="36" 
+            Width="191"/>
+        <Label Content="c:" 
+            FontSize="18" 
+            HorizontalAlignment="Center" 
+            Margin="11,131,232,0" 
+            VerticalAlignment="Top" 
+            Grid.Row="0"
+            Grid.Column="0"
+            Height="30" 
+            Width="26"/>
+        <Label Content="+" 
+            FontSize="18" 
+            HorizontalAlignment="Center" 
+            Margin="115,131,128,0" 
+            VerticalAlignment="Top" 
+            Grid.Row="0"
+            Grid.Column="0"
+            Height="30" 
+            Width="26"/>
+        <Label Content="i" 
+            FontSize="18" 
+            HorizontalAlignment="Center" 
+            Margin="219,131,24,0" 
+            VerticalAlignment="Top" 
+            Grid.Row="0"
+            Grid.Column="0"
+            Height="30" 
+            Width="26"/>
+        <TextBox HorizontalAlignment="Left" Height="30" Margin="37,131,0,0" TextWrapping="Wrap" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" Width="73" TextChanged="TextBox_TextChanged"/>
+        <TextBox HorizontalAlignment="Left" Height="30" Margin="141,131,0,0" TextWrapping="Wrap" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" Width="73" TextChanged="TextBox_TextChanged"/>
+        <Label Content="k:" 
+            FontSize="18" 
+            HorizontalAlignment="Center" 
+            Margin="11,173,232,0" 
+            VerticalAlignment="Top" 
+            Grid.Row="0"
+            Grid.Column="0"
+            Height="30" 
+            Width="26"/>
+        <RadioButton Content="3" HorizontalAlignment="Left" Margin="42,185,0,0" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top"/>
+        <RadioButton Content="4" HorizontalAlignment="Left" Margin="84,185,0,0" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top"/>
+        <Slider HorizontalAlignment="Left" Margin="10,235,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" Width="203"/>
+        <Label Content="Масштаб:" 
+            FontSize="18" 
+            HorizontalAlignment="Center" 
+            Margin="84,205,97,0" 
+            VerticalAlignment="Top" 
+            Grid.Row="0"
+            Grid.Column="0"
+            Height="36" 
+            Width="88"/>
+        <Label Content="%" 
+            FontSize="18" 
+            HorizontalAlignment="Center" 
+            Margin="239,229,4,0" 
+            VerticalAlignment="Top" 
+            Grid.Row="0"
+            Grid.Column="0"
+            Height="30" 
+            Width="26"/>
+        <Label Content="Колірна модель:" 
+            FontSize="18" 
+            HorizontalAlignment="Center" 
+            Margin="0,266,121,0" 
+            VerticalAlignment="Top" 
+            Grid.Row="0"
+            Grid.Column="0"
+            Height="36" 
+            Width="148"/>
+        <ComboBox 
+            HorizontalAlignment="Right" 
+            Margin="0,274,4,0" 
+            VerticalAlignment="Top" 
+            Grid.Row="0"
+            Grid.Column="0"
+            Width="120">
+            <TextBlock>Standard</TextBlock>
+            <TextBlock>Candy</TextBlock>
+            <TextBlock>Gold</TextBlock>
+            <TextBlock>Zebra</TextBlock>
+            <TextBlock>BlackRed</TextBlock>
+        </ComboBox>
+        <Image Source ="pack://siteoforigin:,,,/Resources/UnicornHat.png" HorizontalAlignment="Left" Height="105" Margin="154,0,0,0" Grid.Row="2" VerticalAlignment="Top" Width="111"/>
+
+
+
     </Grid>
 </Page>
