--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -11,169 +11,244 @@
     Background="White"
     mc:Ignorable="d">
 
-    <Grid Margin="0,50,0,0" HorizontalAlignment="Left" Width="900">
+    <Grid
+        Width="900"
+        Margin="0,50,0,0"
+        HorizontalAlignment="Left">
         <Grid.RowDefinitions>
-            <RowDefinition Height="334*"/>
-            <RowDefinition Height="111*"/>
-            <RowDefinition Height="105*"/>
+            <RowDefinition Height="334*" />
+            <RowDefinition Height="111*" />
+            <RowDefinition Height="105*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="269*"/>
-            <ColumnDefinition Width="631*"/>
+            <ColumnDefinition Width="269*" />
+            <ColumnDefinition Width="631*" />
         </Grid.ColumnDefinitions>
         <Canvas
             Name="fractalCnv"
-            Margin="1,0,615,0" 
-            Grid.RowSpan="2" 
-            Grid.Column="1">
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            Margin="1,0,615,0">
             <Image
                 Name="fractalImg"
+                Grid.Column="1"
+                Canvas.Left="10"
+                Canvas.Top="10"
                 Width="622"
                 Height="540"
-                RenderOptions.BitmapScalingMode="NearestNeighbor" 
-                Grid.Column ="1"
-                Canvas.Left="10" 
-                Canvas.Top="10" />
+                RenderOptions.BitmapScalingMode="NearestNeighbor" />
         </Canvas>
         <Button
             Name="createFractalBtn"
+            Grid.Row="1"
+            Width="162"
             Height="45"
-            Margin="52,0,55,56" 
+            Margin="52,0,55,56"
+            HorizontalAlignment="Center"
             VerticalAlignment="Bottom"
-            Click="generateFractal" 
-            Grid.Row="1" 
-            RenderTransformOrigin="0.509,0.578" 
-            HorizontalAlignment="Center" 
-            Width="162">
-            <Grid Width="102" RenderTransformOrigin="0.405,0.5" Height="27">
-                <Image HorizontalAlignment="Left" Source="pack://siteoforigin:,,,/Resources/BuildFractal.png" Grid.Column="0" VerticalAlignment="Stretch" Margin="-25,0,0,0" Width="25"/>
-                <Label HorizontalAlignment="Center" Content="Побудувати фрактал" Margin="0,0,-21,0"/>
+            Click="generateFractal"
+            RenderTransformOrigin="0.509,0.578">
+            <Grid
+                Width="102"
+                Height="27"
+                RenderTransformOrigin="0.405,0.5">
+                <Image
+                    Grid.Column="0"
+                    Width="25"
+                    Margin="-25,0,0,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Stretch"
+                    Source="pack://siteoforigin:,,,/Resources/BuildFractal.png" />
+                <Label
+                    Margin="0,0,-21,0"
+                    HorizontalAlignment="Center"
+                    Content="Побудувати фрактал" />
             </Grid>
         </Button>
-        <Button 
+        <Button
             Name="saveFractalBtn"
-            Height="41" Margin="52,0,55,10" 
-            VerticalAlignment="Bottom" 
-            Click="SavePicture" 
-            Grid.Row="1" 
-            HorizontalAlignment="Center" 
-            Width="162">
-            <Grid >
-                <Image HorizontalAlignment="Left" Source="pack://siteoforigin:,,,/Resources/save.png" Grid.Column="0" VerticalAlignment="Stretch" Margin="-25,0,0,0" Width="25"/>
-                <Label HorizontalAlignment="Center" Content="Зберегти" Margin="0,0,-21,0"/>
+            Grid.Row="1"
+            Width="162"
+            Height="41"
+            Margin="52,0,55,10"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
+            Click="SavePicture">
+            <Grid>
+                <Image
+                    Grid.Column="0"
+                    Width="25"
+                    Margin="-25,0,0,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Stretch"
+                    Source="pack://siteoforigin:,,,/Resources/save.png" />
+                <Label
+                    Margin="0,0,-21,0"
+                    HorizontalAlignment="Center"
+                    Content="Зберегти" />
             </Grid>
         </Button>
-        <Label Content="Фрактали" 
-               FontSize="25" 
-               HorizontalAlignment="Center" 
-               Margin="78,10,57,0" 
-               VerticalAlignment="Top" 
-               Grid.Row="0"
-               Grid.Column="0"
-               Height="49" 
-               Width="134"/>
-        <Label Content="f(z) = zk + c" 
-               FontSize="20" 
-               HorizontalAlignment="Center" 
-               Margin="79,59,68,0" 
-               VerticalAlignment="Top" 
-               Grid.Row="0"
-               Grid.Column="0"
-               Height="36" 
-               Width="122"/>
-        <Label Content="Введіть коефіцієнти:" 
-            FontSize="18" 
-            HorizontalAlignment="Center" 
-            Margin="42,95,36,0" 
-            VerticalAlignment="Top" 
+        <Label
             Grid.Row="0"
             Grid.Column="0"
-            Height="36" 
-            Width="191"/>
-        <Label Content="c:" 
-            FontSize="18" 
-            HorizontalAlignment="Center" 
-            Margin="11,131,232,0" 
-            VerticalAlignment="Top" 
+            Width="134"
+            Height="49"
+            Margin="78,10,57,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="Фрактали"
+            FontSize="25" />
+        <Label
             Grid.Row="0"
             Grid.Column="0"
-            Height="30" 
-            Width="26"/>
-        <Label Content="+" 
-            FontSize="18" 
-            HorizontalAlignment="Center" 
-            Margin="115,131,128,0" 
-            VerticalAlignment="Top" 
+            Width="122"
+            Height="36"
+            Margin="79,59,68,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="f(z) = zk + c"
+            FontSize="20" />
+        <Label
             Grid.Row="0"
             Grid.Column="0"
-            Height="30" 
-            Width="26"/>
-        <Label Content="i" 
-            FontSize="18" 
-            HorizontalAlignment="Center" 
-            Margin="219,131,24,0" 
-            VerticalAlignment="Top" 
+            Width="191"
+            Height="36"
+            Margin="42,95,36,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="Введіть коефіцієнти:"
+            FontSize="18" />
+        <Label
             Grid.Row="0"
             Grid.Column="0"
-            Height="30" 
-            Width="26"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="37,131,0,0" TextWrapping="Wrap" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" Width="73" TextChanged="TextBox_TextChanged"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="141,131,0,0" TextWrapping="Wrap" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" Width="73" TextChanged="TextBox_TextChanged"/>
-        <Label Content="k:" 
-            FontSize="18" 
-            HorizontalAlignment="Center" 
-            Margin="11,173,232,0" 
-            VerticalAlignment="Top" 
+            Width="26"
+            Height="30"
+            Margin="11,131,232,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="c:"
+            FontSize="18" />
+        <Label
             Grid.Row="0"
             Grid.Column="0"
-            Height="30" 
-            Width="26"/>
-        <RadioButton Content="3" HorizontalAlignment="Left" Margin="42,185,0,0" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top"/>
-        <RadioButton Content="4" HorizontalAlignment="Left" Margin="84,185,0,0" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top"/>
-        <Slider HorizontalAlignment="Left" Margin="10,235,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" Width="203"/>
-        <Label Content="Масштаб:" 
-            FontSize="18" 
-            HorizontalAlignment="Center" 
-            Margin="84,205,97,0" 
-            VerticalAlignment="Top" 
+            Width="26"
+            Height="30"
+            Margin="115,131,128,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="+"
+            FontSize="18" />
+        <Label
             Grid.Row="0"
             Grid.Column="0"
-            Height="36" 
-            Width="88"/>
-        <Label Content="%" 
-            FontSize="18" 
-            HorizontalAlignment="Center" 
-            Margin="239,229,4,0" 
-            VerticalAlignment="Top" 
+            Width="26"
+            Height="30"
+            Margin="219,131,24,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="i"
+            FontSize="18" />
+        <TextBox
             Grid.Row="0"
             Grid.Column="0"
-            Height="30" 
-            Width="26"/>
-        <Label Content="Колірна модель:" 
-            FontSize="18" 
-            HorizontalAlignment="Center" 
-            Margin="0,266,121,0" 
-            VerticalAlignment="Top" 
+            Width="73"
+            Height="30"
+            Margin="37,131,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            TextChanged="TextBox_TextChanged"
+            TextWrapping="Wrap" />
+        <TextBox
             Grid.Row="0"
             Grid.Column="0"
-            Height="36" 
-            Width="148"/>
-        <ComboBox 
-            HorizontalAlignment="Right" 
-            Margin="0,274,4,0" 
-            VerticalAlignment="Top" 
+            Width="73"
+            Height="30"
+            Margin="141,131,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            TextChanged="TextBox_TextChanged"
+            TextWrapping="Wrap" />
+        <Label
             Grid.Row="0"
             Grid.Column="0"
-            Width="120">
+            Width="26"
+            Height="30"
+            Margin="11,173,232,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="k:"
+            FontSize="18" />
+        <RadioButton
+            Grid.Row="0"
+            Grid.Column="0"
+            Margin="42,185,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="3" />
+        <RadioButton
+            Grid.Row="0"
+            Grid.Column="0"
+            Margin="84,185,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="4" />
+        <Slider
+            Grid.Row="0"
+            Grid.Column="0"
+            Width="203"
+            Margin="10,235,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top" />
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Width="88"
+            Height="36"
+            Margin="84,205,97,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="Масштаб:"
+            FontSize="18" />
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Width="26"
+            Height="30"
+            Margin="239,229,4,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="%"
+            FontSize="18" />
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Width="148"
+            Height="36"
+            Margin="0,266,121,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="Колірна модель:"
+            FontSize="18" />
+        <ComboBox
+            Grid.Row="0"
+            Grid.Column="0"
+            Width="120"
+            Margin="0,274,4,0"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top">
             <TextBlock>Standard</TextBlock>
             <TextBlock>Candy</TextBlock>
             <TextBlock>Gold</TextBlock>
             <TextBlock>Zebra</TextBlock>
             <TextBlock>BlackRed</TextBlock>
         </ComboBox>
-        <Image Source ="pack://siteoforigin:,,,/Resources/UnicornHat.png" HorizontalAlignment="Left" Height="105" Margin="154,0,0,0" Grid.Row="2" VerticalAlignment="Top" Width="111"/>
-
-
-
+        <Image
+            Grid.Row="2"
+            Width="111"
+            Height="105"
+            Margin="154,0,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Source="/UniGraphics;component/Resources/Unicorn/UnicornHat.png" />
     </Grid>
 </Page>
