--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -16,13 +16,13 @@
         Margin="0,50,0,0"
         HorizontalAlignment="Left">
         <Grid.RowDefinitions>
-            <RowDefinition Height="334*" />
-            <RowDefinition Height="111*" />
-            <RowDefinition Height="105*" />
+            <RowDefinition Height="310" />
+            <RowDefinition Height="60" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="269*" />
-            <ColumnDefinition Width="631*" />
+            <ColumnDefinition Width="269" />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Canvas
             Name="fractalCnv"
@@ -39,40 +39,11 @@
                 RenderOptions.BitmapScalingMode="NearestNeighbor" />
         </Canvas>
         <Button
-            Name="createFractalBtn"
-            Grid.Row="1"
-            Width="162"
-            Height="45"
-            Margin="52,0,55,56"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Bottom"
-            Click="generateFractal"
-            RenderTransformOrigin="0.509,0.578">
-            <Grid
-                Width="102"
-                Height="27"
-                RenderTransformOrigin="0.405,0.5">
-                <Image
-                    Grid.Column="0"
-                    Width="25"
-                    Margin="-25,0,0,0"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Stretch"
-                    Source="pack://siteoforigin:,,,/Resources/BuildFractal.png" />
-                <Label
-                    Margin="0,0,-21,0"
-                    HorizontalAlignment="Center"
-                    Content="Побудувати фрактал" />
-            </Grid>
-        </Button>
-        <Button
             Name="saveFractalBtn"
             Grid.Row="1"
             Width="162"
-            Height="41"
-            Margin="52,0,55,10"
+            Margin="10,10,10,10"
             HorizontalAlignment="Center"
-            VerticalAlignment="Bottom"
             Click="SavePicture">
             <Grid>
                 <Image
@@ -181,6 +152,8 @@
         <RadioButton
             Grid.Row="0"
             Grid.Column="0"
+            Width="25"
+            Height="15"
             Margin="42,185,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
@@ -188,6 +161,8 @@
         <RadioButton
             Grid.Row="0"
             Grid.Column="0"
+            Width="25"
+            Height="15"
             Margin="84,185,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
@@ -196,6 +171,7 @@
             Grid.Row="0"
             Grid.Column="0"
             Width="203"
+            Height="18"
             Margin="10,235,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top" />
@@ -233,6 +209,7 @@
             Grid.Row="0"
             Grid.Column="0"
             Width="120"
+            Height="22"
             Margin="0,274,4,0"
             HorizontalAlignment="Right"
             VerticalAlignment="Top">
@@ -246,8 +223,8 @@
             Grid.Row="2"
             Width="111"
             Height="105"
-            Margin="154,0,0,0"
-            HorizontalAlignment="Left"
+            Margin="0,10,10,0"
+            HorizontalAlignment="Right"
             VerticalAlignment="Top"
             Source="/UniGraphics;component/Resources/Unicorn/UnicornHat.png" />
     </Grid>
