Added minimum height to section with unicorn-helper so it wont ruin interface above it.

--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -11,13 +11,11 @@
     Background="White"
     mc:Ignorable="d">
 
-    <Grid
-        Width="900"
-        HorizontalAlignment="Left">
+    <Grid Width="900" HorizontalAlignment="Left">
         <Grid.RowDefinitions>
             <RowDefinition Height="310" />
             <RowDefinition Height="60" />
-            <RowDefinition />
+            <RowDefinition MinHeight="120" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="269" />
@@ -220,9 +218,11 @@
         </ComboBox>
         <Image
             Grid.Row="2"
-            Width="111"
+            Width="100"
+            Height="100"
             Margin="0,0,10,10"
             HorizontalAlignment="Right"
-            Source="/UniGraphics;component/Resources/Unicorn/UnicornHat.png" Height="105" VerticalAlignment="Bottom" />
+            VerticalAlignment="Bottom"
+            Source="/UniGraphics;component/Resources/Unicorn/UnicornHat.png" />
     </Grid>
 </Page>
