--- a/UniGraphics/MainWindow.xaml
+++ b/UniGraphics/MainWindow.xaml
@@ -6,8 +6,9 @@
     xmlns:local="clr-namespace:UniGraphics"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="UniGraphics"
-    Width="1300"
-    Height="700"
+    Width="917"
+    Height="640"
+    Icon="/UniGraphics;component/Resources/Unicorn/logo.png"
     mc:Ignorable="d">
     <Grid Name="mainGrid">
         <Frame
