--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -172,13 +172,18 @@
             VerticalAlignment="Top"
             Content="4" />
         <Slider
+            Value="{Binding Path=FractalScale}"
+            Name="ScaleSlider"
             Grid.Row="0"
             Grid.Column="0"
             Width="203"
             Height="18"
             Margin="10,235,0,0"
             HorizontalAlignment="Left"
-            VerticalAlignment="Top" />
+            VerticalAlignment="Top"
+            Maximum="1"
+            Minimum="0.001"
+            SmallChange="0.001" LargeChange="0.1" IsMoveToPointEnabled="True" />
         <Label
             Grid.Row="0"
             Grid.Column="0"
@@ -231,5 +236,15 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
             Source="/UniGraphics;component/Resources/Unicorn/UnicornHat.png" />
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Width="100"
+            Height="30"
+            Margin="159,185,10,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="{Binding Path=FractalScale}"
+            FontSize="18" />
     </Grid>
 </Page>
