--- a/UniGraphics/ColorModels/ColorModelsView.xaml
+++ b/UniGraphics/ColorModels/ColorModelsView.xaml
@@ -1,10 +1,10 @@
 ﻿<Page
-    x:Class="UniGraphics.Fractals.ColorModelsView"
+    x:Class="UniGraphics.ColorModels.ColorModelsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cnvrt="clr-namespace:UniGraphics.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:UniGraphics.Fractals"
+    xmlns:local="clr-namespace:UniGraphics.ColorModels"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="ColorModelsView"
     d:DesignHeight="600"
