--- a/UniGraphics/ColorModels/ColorModelsView.xaml
+++ b/UniGraphics/ColorModels/ColorModelsView.xaml
@@ -102,7 +102,16 @@
                     Content="Оберіть тон:"
                     FontSize="18"
                     Foreground="White" />
-                <Slider x:Name="lightnessSlider" Margin="31,167,39,0" VerticalAlignment="Top" Grid.Row="1"/>
+                <Slider 
+                    x:Name="lightnessSlider" 
+                    Margin="31,167,39,0" 
+                    VerticalAlignment="Top" 
+                    Value="{Binding Lightness}"
+                    Grid.Row="1" 
+                    SmallChange="1" 
+                    LargeChange="10"
+                    Maximum="100"
+                    IsMoveToPointEnabled="True" Minimum="-100"/>
                 <Label Visibility="{Binding RGBValuesVisibility}" Content="RGB:" Margin="39,218,180,0" VerticalAlignment="Top" Grid.Row="1"/>
                 <Label Visibility="{Binding HSLValuesVisibility}" Content="HSL:" Margin="39,250,180,0" VerticalAlignment="Top" Grid.Row="1"/>
                 <Label Visibility="{Binding RGBValuesVisibility}" Name="rgbLabel" Content="{Binding RGBText}" Margin="89,218,67,0" VerticalAlignment="Top" Grid.Row="1"/>
@@ -115,6 +124,9 @@
                     Margin="203,90,39,0" 
                     Width="27" 
                     VerticalAlignment="Top"/>
+                <Label Content="+100%" HorizontalAlignment="Left" Margin="203,185,0,0" VerticalAlignment="Top"/>
+                <Label Content="-100%" HorizontalAlignment="Left" Margin="10,187,0,0" VerticalAlignment="Top"/>
+                <Label Content="{Binding Lightness}" HorizontalAlignment="Left" Margin="127,187,0,0" VerticalAlignment="Top"/>
             </Grid>
         </Border>
         <Border Background="#BCC3FF" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2"></Border>
